--- a/Content/Site.css
+++ b/Content/Site.css
@@ -27,14 +27,18 @@ textarea {
 
 /*Project List View Overlapping Skill Icons*/
 .skill-avatars {
-    min-width: 150px;
-    /*border: 1px solid red;*/
+    width: 200px;
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    width: 100px;
+    justify-content: flex-start;
     overflow: hidden;
+}
+
+@media only screen and (max-width: 991px) {
+    .skill-avatars {
+        width: 152px;
+    }
 }
 
 .skill-avatar {
