--- a/Views/Projects/List.cshtml
+++ b/Views/Projects/List.cshtml
@@ -11,21 +11,23 @@
 
 @if (Model.Any())
 {
-    <table class="table table-bordered table-hover"
-           @*style="table-layout:fixed;"*@>
+    <table class="table table-bordered table-hover">
         <thead>
             <tr>
                 <th class="d-none d-md-table-cell">Icon</th>
                 <th>Description</th>
                 <th>Skills</th>
                 <th class="d-none d-lg-table-cell">Date Added</th>
-                <th>Actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var project in Model)
             {
                 <tr>
+
+                    @*ICON*@
+
                     <td class="d-none d-md-table-cell">
                         <div style="width: 100%; display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-evenly;">
                             @if (project.Icon != null && project.Icon != "")
@@ -36,7 +38,16 @@
                             }
                         </div>
                     </td>
+
+                    @*DESCRIPTION*@
+
                     <td>
+                        @if (project.Icon != null && project.Icon != "")
+                        {
+                            <a href="@Url.Action("Details", "Projects", new { id = project.Id })" title=@($"{project.Title} Details") style="display: flex; width: 100%;">
+                                <img src="@Url.Content(project.Icon)" alt=@($"{project.Title} Icon") class="d-md-none d-sm-block" style="width: 150px; height: 100px; margin: 0 auto; object-fit: scale-down;" />
+                            </a>
+                        }
                         <p>
                             @Html.ActionLink(project.Title, "Details", "Projects", new { id = project.Id }, new { style = "text-decoration: none;" })
                         </p>
@@ -45,44 +56,21 @@
                             <p>
                                 @project.Description
                             </p>
-                        }
-                        @if (project.Icon != null && project.Icon != "")
-                        {
-                            <a href="@Url.Action("Details", "Projects", new { id = project.Id })" title=@($"{project.Title} Details") style="display: flex; width: 100%;">
-                                <img src="@Url.Content(project.Icon)" alt=@($"{project.Title} Icon") class="d-md-none d-sm-block" style="width: 150px; height: 100px; margin: 0 auto; object-fit: scale-down;" />
-                            </a>
+                            <p class="d-lg-none d-md-block">Added to database on @project.DateAdded.ToShortDateString()</p>
                         }
                     </td>
 
                     @*SKILL AVATARS*@
 
                     <td>
-
-                        @*SHOW ALL SKILL AVATARS*@
-
-                        <div class="skill-avatars d-none d-md-table-cell">
-
-                            @foreach (var projectSkill in project.ProjectSkills)
-                            {
-                                <a href="@Url.Action("Details", "Skills", new { id = projectSkill.Skill.Id })" title=@($"{projectSkill.Skill.Title} Details") data-bs-toggle="tooltip" data-bs-placement="top" style="text-decoration: none">
-                                    @if (projectSkill.Skill.Icon.IsEmpty())
-                                    {
-                                        <p>@projectSkill.Skill.Title</p>
-                                    }
-                                    else
-                                    {
-                                        <img src="@Url.Content(projectSkill.Skill.Icon)" alt=@($"{projectSkill.Skill.Title} Icon") style="width: 48px; height: 48px; margin: 4px; object-fit: scale-down;" />
-                                    }
-
-                                </a>
+                        <div class="skill-avatars">
+                            @{
+                                var skillCount = project.ProjectSkills.Count;
+                                var skillsCapacity = 18;
+                                var skillsToDisplay = skillCount <= skillsCapacity ? skillCount : skillsCapacity;
+                                var skillsHidden = skillCount - skillsToDisplay;
                             }
-                        </div>
-
-                        @*SHOW OVERLAPPING SKILL AVATARS*@
-
-                        <div class="skill-avatars d-xs-table-cell d-md-none">
-                            @{ var skillCount = project.ProjectSkills.Count > 15 ? 15 : project.ProjectSkills.Count; }
-                            @for (int i = 0; i < skillCount; i++)
+                            @for (int i = 0; i < skillsToDisplay; i++)
                             {
                                 if (!project.ProjectSkills[i].Skill.Icon.IsEmpty())
                                 {
@@ -95,6 +83,12 @@
                                             <img src="@Url.Content(project.ProjectSkills[i].Skill.Icon)">
                                         </a>
                                     </span>
+                                }
+                            }
+                            @{
+                                if (skillsHidden > 3)
+                                {
+                                    @Html.ActionLink($"and {@skillsHidden} more", "Details", "Projects", new { id = project.Id })
                                 }
                             }
                         </div>
@@ -110,23 +104,33 @@
                         <div class="d-grid gap-2">
                             @if (project?.RepositoryUrl.IsEmpty() == false)
                             {
-                                <a href=@project.RepositoryUrl class="btn btn-primary">Repo</a>
-                            }
-                            else
-                            {
-                                @Html.ActionLink("Add Repo", "Edit", "Projects", new { id = project.Id }, new { @class = "btn btn-outline-primary" })
+                                <a href=@project.RepositoryUrl class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Repo">
+                                    <img src="~/Content/Icons/github.svg" alt="github" />
+                                </a>
                             }
                             @if (project?.DeploymentUrl.IsEmpty() == false)
                             {
-                                <a href=@project.DeploymentUrl class="btn btn-primary">Site</a>
-                            }
-                            else
-                            {
-                                @Html.ActionLink("Add Site", "Edit", "Projects", new { id = project.Id }, new { @class = "btn btn-outline-primary" })
-                            }
-                            @Html.ActionLink("Edit", "Edit", "Projects", new { id = project.Id }, new { @class = "btn btn-danger" })
+                                <a href=@project.DeploymentUrl class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Website">
+                                    <img src="~/Content/Icons/globe.svg" alt="website" />
 
-                            @Html.ActionLink("Delete", "Delete", "Projects", new { id = project.Id }, new { @class = "btn btn-danger" })
+                                </a>
+                            }
+                            <a href="@Url.Action("Edit", "Projects", new { id = project.Id })"
+                               class="btn btn-primary"
+                               title=@($"Edit {project.Title}")
+                               data-bs-toggle="tooltip"
+                               data-bs-placement="top"
+                               style="text-decoration: none">
+                                <img src="~/Content/Icons/pencil-solid.svg" alt="edit" style="width: 16px;" />
+                            </a>
+                            <a href="@Url.Action("Delete", "Projects", new { id = project.Id })"
+                               class="btn btn-danger"
+                               title=@($"Delete {project.Title}")
+                               data-bs-toggle="tooltip"
+                               data-bs-placement="top"
+                               style="text-decoration: none">
+                                <img src="~/Content/Icons/trash-solid.svg" alt="delete" style="width: 16px;" />
+                            </a>
                         </div>
                     </td>
                 </tr>
