--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="jumbotron">
+    <img 
+         src="~/Content/Icons/project-icons/dyno-logo-darkmode.svg" 
+         style="width: 100%; max-height: 400px;"
+         />
     <h1>Dyno</h1>
     <p class="lead">Dyno is an ASP.NET web app for tracking your coding projects, certifications, and skills.</p>
     <p>DevPath currently has @Model users.</p>
