--- a/Views/EmploymentListings/List.cshtml
+++ b/Views/EmploymentListings/List.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Jobs</h2>
 
-<p>DevPath currently has @Model.Count() jobs.</p>
+<p>Dyno currently has @Model.Count() jobs.</p>
 
 <p>@Html.ActionLink("Add Job Listing", "New", "EmploymentListings", new { @class = "btn btn-primary" })</p>
 
