--- a/Views/Projects/List.cshtml
+++ b/Views/Projects/List.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Projects</h2>
 
-<p>DevPath currently has @Model.Count() projects.</p>
+<p>Dyno currently has @Model.Count() projects.</p>
 
 <p>@Html.ActionLink("Add Project", "New", "Projects", new { @class = "btn btn-primary" })</p>
 
