--- a/Views/Skills/List.cshtml
+++ b/Views/Skills/List.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Skills</h2>
 
-<p>DevPath currently has @Model.Count() skills.</p>
+<p>Dyno currently has @Model.Count() skills.</p>
 
 <p>@Html.ActionLink("Add Skill", "New", "Skills", new { @class = "btn btn-primary" })</p>
 
