--- a/Views/Companies/List.cshtml
+++ b/Views/Companies/List.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Companies</h2>
 
-<p>DevPath currently has @Model.Count() companies.</p>
+<p>Dyno currently has @Model.Count() companies.</p>
 
 <p>@Html.ActionLink("Add Company", "New", "Company", new { @class = "btn btn-primary" })</p>
 
