Changed navbar link order - Jobs first

--- a/Views/Skills/List.cshtml
+++ b/Views/Skills/List.cshtml
@@ -18,7 +18,7 @@
                 <th class="d-none d-md-table-cell">Icon</th>
                 <th>Description</th>
                 <th>Projects</th>
-                <th class="d-none d-lg-table-cell" style="width:150px;">Development</th>
+                <th class="d-none d-lg-table-cell">Development</th>
                 <th></th>
             </tr>
         </thead>
@@ -97,7 +97,7 @@
 
                 @*DEVELOPMENT*@
 
-                <td class="d-none d-lg-table-cell" style="white-space: nowrap;">
+                <td class="d-none d-lg-table-cell">
                     <p>
                         @skill.Developer
                     </p>
