--- a/Views/Projects/ListReadOnly.cshtml
+++ b/Views/Projects/ListReadOnly.cshtml
@@ -88,8 +88,21 @@
                             <p>
                                 @project.Description
                             </p>
-                            <p class="d-lg-none d-md-block">Added to database on @project.DateAdded.ToShortDateString()</p>
                         }
+
+                        @*DEVELOPER(S)*@
+                        @if (project.ApplicationUserProjects.Count > 0)
+                        {
+                            string devLabel = "Developer" + ((project.ApplicationUserProjects.Count > 1) ? "s" : "") + ":";
+                            <p style="margin-bottom: 0;">@devLabel</p>
+                            <ul style="list-style-type: none; padding: 0;">
+                                @foreach (var aup in project.ApplicationUserProjects)
+                                {
+                                    <li>@aup.ApplicationUser.UserName</li>
+                                }
+                            </ul>
+                        }
+                        <p class="d-lg-none d-md-block">Added to database on @project.DateAdded.ToShortDateString()</p>
                     </td>
 
                     @*SKILL AVATARS*@
