--- a/Views/EmploymentListings/EmploymentListingForm.cshtml
+++ b/Views/EmploymentListings/EmploymentListingForm.cshtml
@@ -20,6 +20,14 @@
             new { @class = "form-control" })
     </div>
     <div class="mb-3">
+        @Html.LabelFor(el => el.SelectedStaffingCompanyId)
+        @Html.DropDownListFor(
+            el => el.SelectedStaffingCompanyId,
+            new SelectList(Model.StaffingCompanyOptions, "Id", "Title"),
+            "Select Company",
+            new { @class = "form-control" })
+    </div>
+    <div class="mb-3">
         @Html.LabelFor(el => el.PayQuantity)
         @Html.EditorFor(el => el.PayQuantity, new { htmlAttributes = new { @class = "form-control" } })
     </div>
