--- a/Views/EmploymentListings/EmploymentListingForm.cshtml
+++ b/Views/EmploymentListings/EmploymentListingForm.cshtml
@@ -29,7 +29,7 @@
     </div>
     <div class="mb-3">
         @Html.LabelFor(el => el.PayQuantity)
-        @Html.EditorFor(el => el.PayQuantity, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.EditorFor(el => el.PayQuantity, new { htmlAttributes = new { @class = "form-control", step = "1000" } })
     </div>
     <div class="mb-3">
         <div>
