--- a/Views/EmploymentListings/List.cshtml
+++ b/Views/EmploymentListings/List.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<DevPath.Models.EmploymentListing>
+﻿@using Microsoft.AspNet.Identity;
+@model IEnumerable<DevPath.Models.EmploymentListing>
 @{
     ViewBag.Title = "Jobs";
 }
@@ -18,7 +19,7 @@
                 <th class="d-none d-md-table-cell">Company</th>
                 <th>Description</th>
                 <th>Requirements</th>
-                <th class="d-none d-lg-table-cell">Date Added</th>
+                <th class="d-none d-lg-table-cell">Posted By</th>
                 <th></th>
             </tr>
         </thead>
@@ -27,11 +28,14 @@
             {
                 <tr>
                     @*TITLE*@
-                    <td class="d-none d-md-table-cell">
-                        <p>
-                            @job?.Title
-                        </p>
-                    </td>
+                    @if (!job.Title.IsEmpty())
+                    {
+                        <td class="d-none d-md-table-cell">
+                            <p>
+                                @job.Title
+                            </p>
+                        </td>
+                    }
 
                     @*COMPANY*@
                     <td class="d-none d-md-table-cell">
@@ -47,22 +51,33 @@
                     </td>
 
                     @*DESCRIPTION*@
-                    <td>
-                        <p class="d-md-none d-sm-block">@job.Title</p>
-                        @if (job.StaffingCompany != null)
-                        {
-                            <p class="d-md-none d-sm-block">@job.ClientCompany.Title</p>
-                        }
-                        @if (job.StaffingCompany != null)
-                        {
-                            <p class="d-md-none d-sm-block">Staffing Company: @job.StaffingCompany.Title</p>
-                        }
-                        @if (!job.FullText.IsEmpty())
-                        {
-                            <p>@job.FullText</p>
-                        }
-                        <p class="d-lg-none d-md-block">Added to database on @job.DateAdded.ToShortDateString()</p>
-                    </td>
+                <td>
+                    <p class="d-md-none d-sm-block">@job.Title</p>
+                    @if (job.StaffingCompany != null)
+                    {
+                        <p class="d-md-none d-sm-block">@job.ClientCompany.Title</p>
+                    }
+                    @if (job.StaffingCompany != null)
+                    {
+                        <p class="d-md-none d-sm-block">Staffing Company: @job.StaffingCompany.Title</p>
+                    }
+                    @if (!job.FullText.IsEmpty())
+                    {
+                        <p>@job.FullText</p>
+                    }
+                    @if (job.Creator == null)
+                    {
+                        <p class="d-lg-none d-md-block">Posted on @job.DateAdded.ToShortDateString()</p>
+                    }
+                    else if (job.Creator.Id == User.Identity.GetUserId())
+                    {
+                        <p class="d-lg-none d-md-block">Posted by you on @job.DateAdded.ToShortDateString()</p>
+                    }
+                    else
+                    {
+                        <p class="d-lg-none d-md-block">Posted by @job.Creator.UserName on @job.DateAdded.ToShortDateString()</p>
+                    }
+                </td>
 
                     @*SKILLS*@
                     <td>
@@ -97,36 +112,26 @@
                         </div>
                     </td>
 
-                    @*DATE ADDED*@
-                    <td class="d-none d-lg-table-cell" style="white-space: nowrap;">@job.DateAdded.ToString("yyyy-MM-dd")</td>
-
+                    @*POSTED BY*@
+                <td class="d-none d-lg-table-cell" style="white-space: nowrap;">
+                    @if (job.Creator == null)
+                    {
+                        <p>Admin on @job.DateAdded.ToShortDateString()</p>
+                    }
+                    else if (job.Creator.Id == User.Identity.GetUserId())
+                    {
+                        <p>You on @job.DateAdded.ToShortDateString()</p>
+                    }
+                    else
+                    {
+                        <p>
+                            @job.Creator.UserName on @job.DateAdded.ToShortDateString()
+                        </p>
+                    }
+                </td>
                     @*ACTIONS*@
                     <td>
-                        <div class="d-grid gap-2">
-                            @if (job?.Url.IsEmpty() == false)
-                            {
-                                <a href=@job.Url class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Website">
-                                    <img src="~/Content/Icons/globe.svg" alt="website" />
-
-                                </a>
-                            }
-                            <a href="@Url.Action("Edit", "EmploymentListings", new { id = job.Id })"
-                               class="btn btn-primary"
-                               title=@($"Edit {job.Title}")
-                               data-bs-toggle="tooltip"
-                               data-bs-placement="top"
-                               style="text-decoration: none">
-                                <img src="~/Content/Icons/pencil-solid.svg" alt="edit" style="width: 16px;" />
-                            </a>
-                            <a href="@Url.Action("Delete", "EmploymentListings", new { id = job.Id })"
-                               class="btn btn-danger"
-                               title=@($"Delete {job.Title}")
-                               data-bs-toggle="tooltip"
-                               data-bs-placement="top"
-                               style="text-decoration: none">
-                                <img src="~/Content/Icons/trash-solid.svg" alt="delete" style="width: 16px;" />
-                            </a>
-                        </div>
+                        @Html.Partial("_ActionButtons", job)
                     </td>
                 </tr>
             }
