--- a/Views/EmploymentListings/EmploymentListingForm.cshtml
+++ b/Views/EmploymentListings/EmploymentListingForm.cshtml
@@ -32,6 +32,14 @@
             new { @class = "form-control" })
     </div>
     <div class="mb-3">
+        @Html.LabelFor(el => el.SelectedRecruiterId)
+        @Html.DropDownListFor(
+            el => el.SelectedRecruiterId,
+            new SelectList(Model.RecruiterOptions, "Id", "FullName"),
+            "Select Recruiter",
+            new { @class = "form-control" })
+    </div>
+    <div class="mb-3">
         @Html.LabelFor(el => el.PayQuantity)
         @Html.EditorFor(el => el.PayQuantity, new { htmlAttributes = new { @class = "form-control", step = "1000" } })
     </div>
